# bake

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  RECIPE.md  ROADMAP_ISSUES.md  chef-config.h.in  chef.yaml  copilot_instructions.md  vcpkg.json
daemons/: CMakeLists.txt
daemons/cookd/: CMakeLists.txt  README.md  api.c  client.c  config.c  cookd-config.h.in  main.c  private.h
daemons/cookd/include/: notify.h  server.h  threading.h
daemons/cookd/server/: api.c  notify.c  server.c  storage.c
daemons/cvd/: BPF_INTEGRATION.md  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  TODO_ISSUES.md  api.c  bpf_manager.c  bpf_manager.h  config.c  init.c  main.c  private.h
daemons/cvd/include/: server.h
daemons/cvd/server/: api.c  config.c  init.c  server.c  ubuntu.h
daemons/managerd/: CMakeLists.txt
daemons/served/: CMakeLists.txt  README.md  api.c  main.c  shutdown.c  startup.c
daemons/served/api/: CMakeLists.txt  api.h  info.c  install.c  list.c  local_install.c  logs.c  remove.c  switch.c  update.c
daemons/served/include/: runner.h  startup.h  state.h  utils.h
daemons/served/linux/: CMakeLists.txt  api.c  main.c  shutdown.c  startup.c  state.c
daemons/served/state/: CMakeLists.txt  logging.c  runner.c  sm.c  state.c
daemons/served/states/: CMakeLists.txt  cancelled.c  completed.c  dependencies.c  download.c  error.c  generate-wrappers.c  install.c  load.c  mount.c  prechecks.c  remove-wrappers.c  start-services.c  stop-services.c  uninstall.c  unload.c  unmount.c  update.c  verify.c
daemons/served/utils/: CMakeLists.txt  cvd_client.c  fuse_vafs.c  helpers.c  paths.c  paths_linux.c  paths_win32.c  proofs.c
daemons/served/windows/: main.c
daemons/waiterd/: CMakeLists.txt  api_convert.h  api_cookd.c  api_waiterd.c  main.c  private.h  server.c  server_init.c  server_main.c
daemons/waiterd/api/: cookd.c  waiterd.c
daemons/waiterd/include/: convert.h  server.h
daemons/waiterd/server/: config.c  init.c  server.c
examples/: CMakeLists.txt  bpf-metrics-example.c  clang-toolchain.yaml  container-image-system.c  container-policy-example.c  containerv-performance.c  cross-compile.yaml  cvd-policy-specification-example.c  gcc-toolchain.yaml  hello.yaml  microservices.yml  multi-packs.yaml  orchestration-demo.c  security-demo.c  simple-app-recipe.yaml  simple-ingredient-recipe.yaml  simple-library-recipe.yaml  simple-toolchain-recipe.yaml  web-app.yml  windows-volume-management.c
examples/images/: fat.yaml  simple-fat.yaml  uefi-gpt.yaml
examples/os/linux/: base.yaml  devel.yaml  gcc-bootstrap.yaml  gui.yaml
examples/recipes/: capabilities-basic.yaml  capabilities-services.yaml  cross-compile.yaml  gcc-toolchain.yaml  hello.yaml
examples/recipes/hello-world/: CMakeLists.txt  main.c
examples/recipes/linux/: base.yaml  construct.sh
examples/recipes/windows/: construct-lcow-uvm.sh  construct.sh  lcow-uvm.yaml  linux.yaml  nanoserver.yaml  servercore.yaml  windows.yaml
libs/: CMakeLists.txt
libs/chefclient/: CMakeLists.txt  account.c  client.c  download.c  find.c  info.c  login.c  package.c  private.h  proof.c  publish.c  request.c  settings.c  trace.c  verify.c
libs/chefclient/base64/: base64.h  decode.c  encode.c
libs/chefclient/include/: libchefclient.h
libs/common/: CMakeLists.txt  image.c  ingredient.c  package.c  preprocessor.c  recipe.c  recipe_utils.c  runtime.c
libs/compression/: CMakeLists.txt
libs/containerv/: CMakeLists.txt  README.md  WINDOWS_CONTAINERS.md  config-parser.c  container-pool.c  health-monitoring.c  image-manager.c  layer-manager.c  layer-manager.h  load-balancer.c  orchestration-engine.c  performance-benchmark.c  performance-engine.c  performance-monitor.c  registry-client.c  registry-client.h  security-integration.c  security-manager.c  service-discovery.c  shared.c  startup-optimizer.c
libs/containervdisk/: CMakeLists.txt  ubuntu.c  winvm.c
libs/cvd/: CMakeLists.txt  cache.c  client.c  context_create.c  context_destroy.c  private.h  step_clean.c  step_container.c  step_make.c  step_pack.c  step_source.c
libs/dirconf/: CMakeLists.txt  config.c  dirs-linux.c  dirs-win32.c
libs/disk/: CMakeLists.txt  api_fat.c  api_mfs.c  diskbuilder.c  gpt.h  mbr.h  private.h
libs/fridge/: CMakeLists.txt  fridge.c  inventory.c  inventory.h  packaging.h  store.c  store.h
libs/ingredient/: CMakeLists.txt  ingredient.c
libs/kitchen/: CMakeLists.txt  kitchen_client.c  kitchen_destroy.c  kitchen_part_source.c  kitchen_step_clean.c  kitchen_step_common.c  kitchen_step_make.c  kitchen_step_pack.c  private.h  recipe.c  recipe_cache.c  recipe_utils.c  steps.h
libs/oven/: CMakeLists.txt  cache.c  commands.c  container.c  linux_context.c  oven.c  private.h  script.c  win32_context.c
libs/package/: CMakeLists.txt  commands.c  container.c
libs/platform/: CMakeLists.txt  abspath.c  basename.c  chdir.c  chmod.c  chsize.c  cpucount.c  environment.c  filetype.c  fnmatch.c  getcwd.c  getenv.c  getfiles.c  getuserdir.c  guid.c  isdir.c  mkdir.c  package.c  readlink.c  rmdir.c  script.c  setenv.c  sleep.c  spawn.c  stat.c  strsplit.c  symlink.c  unlink.c  unsetenv.c
libs/protecc/: CMakeLists.txt  README.md  dfatrie.c  example.c  matcher.c  node.c  parser.c  private.h  protecc.c  protecc_internal.h
libs/regex/: CMakeLists.txt  regcomp.c  regerror.c  regexec.c  regfree.c
libs/remote/: CMakeLists.txt  client.c  download.c  init.c  pack.c  unpack.c  upload.c
libs/store/: CMakeLists.txt  inventory.c  inventory.h  store.c
libs/vlog/: CMakeLists.txt  logf.c
libs/yaml/: CMakeLists.txt
serve/commands/: CMakeLists.txt  client.c  install.c  remove.c  update.c
tools/: CMakeLists.txt
tools/bake/: CMakeLists.txt  main.c
tools/bakectl/: CMakeLists.txt  main.c
tools/cvctl/: CMakeLists.txt  main.c
tools/cvrun/: CMakeLists.txt  main.c
tools/logv/: CMakeLists.txt  main.c
tools/mkcdk/: CMakeLists.txt  main.c
tools/mkuvm/: CMakeLists.txt  main.c
tools/mkwbase/: CMakeLists.txt  main.c
tools/order/: CMakeLists.txt  main.c
tools/serve/: CMakeLists.txt  main.c
tools/serve-exec/: CMakeLists.txt  client.c  main.c
(+797 files in other folders)
